# dante-backend

./: .gitignore  DEVELOPMENT.md  PROJECT_COMPLETION_REPORT.md  README.md  REAL_DASHBOARD_SETUP.md  deploy-production.sh  docker-compose.prod.yml  docker-compose.yml  env.production.example  final-proof.sh  go.mod  go.sum  real-gpu-test.go  run-gpu-rental-test.sh  test-config.yaml
api-gateway/: Dockerfile  README.md  go.mod  go.sum
api-gateway/cmd/: main.go
api-gateway/configs/: config.yaml
auth-service/: Dockerfile  README.md  alembic.ini  create_tables.py  create_test_user.py  dashboard_service.Dockerfile  dashboard_service.py  gpu_monitor_service.Dockerfile  gpu_monitor_service.py  init_db.py  requirements.txt  simple_auth.py
auth-service/alembic/: env.py
auth-service/app/: main.py
billing-payment-service/: Dockerfile  README.md  go.mod  go.sum
billing-payment-service/cmd/: main.go
common/: types.go  utils.go
monitoring-logging-service/: README.md  docker-compose.yml
provider-daemon/: .goreleaser.yml  Dockerfile  go.mod  go.sum
provider-gui/: README.md  index.html  package-lock.json  package.json
provider-gui/src-tauri/: Cargo.toml  tauri.conf.json
provider-gui/src-tauri/configs/: config.yaml
provider-gui/src-tauri/sidecars/: config.yaml
provider-gui/src-tauri/src/: main.rs
provider-registry-service/: Dockerfile  README.md  go.mod  go.sum
scheduler-orchestrator-service/: .gitignore  Dockerfile  README.md  go.mod
scripts/: init-databases.sql
storage-service/: Dockerfile  README.md  go.mod  go.sum
test-mock-services/: go.mod  main.go
(+120 files in other folders)
