[package]
name = "dante-provider-gui"
version = "0.1.0"
description = "A Tauri App for Dante GPU Providers"
authors = ["you"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.0", features = [ "fs-all", "http-all", "process-all", "shell-open", "system-tray", "window-all", "os-all", "path-all", "notification-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Add humantime for timestamp formatting
humantime = "2.1" 

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
